--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "laravel/framework": "^11.9",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
+        "sadiqsalau/laravel-otp": "^1.0",
         "spatie/laravel-permission": "^6.9",
         "tymon/jwt-auth": "^2.1"
     },
