--- a/composer.json
+++ b/composer.json
@@ -11,12 +11,15 @@
         "guzzlehttp/guzzle": "^7.9",
         "laravel-notification-channels/twilio": "^3.4",
         "laravel/framework": "^11.9",
+        "laravel/octane": "^2.5",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
         "paydunya/paydunya": "^1.0",
         "predis/predis": "^2.2",
         "sadiqsalau/laravel-otp": "^1.0",
         "spatie/laravel-permission": "^6.9",
+        "spiral/roadrunner-cli": "^2.6.0",
+        "spiral/roadrunner-http": "^3.3.0",
         "srmklive/paypal": "^3.0",
         "stripe/stripe-php": "^16.1",
         "twilio/sdk": "^7.16",
